packages/ak-tag/src/shadow.less
@import 'shared-variables.less';
@import '~akutil-shared-styles/src/mixins/focus-ring.less';
@import '~akutil-shared-styles/src/mixins/animations.less';

// Attention: The animation name removeAnimation is referenced in the JS AnimationWrapper
.createBoldAnimation(@remove-animation, 'removeAnimation');

// Because of the shadow DOM boundries we can not style the host element the usual way
// To do this the ':host' pseudo-class should be used
// Also we should style the tag name with the same styles because of the browsers
// that do not support shadow DOM
.host-styles() {
  display: inline-block;
}

// we define a class here in order to re-use it in the storybook
// (because in storybook the component name is randomly generated)
.ak-tag,
ak-tag {
  .host-styles();

  &:not([defined]) {
    display: none;
  }
}

:host {
  .host-styles();

  &(:not([defined])) {
    display: none;
  }
}
.chrome {
  .focus-ring();
  cursor:default;
  background-color: @ak-color-N20;
  padding: 0;
  margin: @spacing;
  border-radius: @border-radius;
  display: flex;
  height: @max-height;
  max-height: @max-height;
  flex-direction: row;

  &:hover {
    .no-focus-ring();
    background-color: @ak-color-N30;

    .button {
      .focus-ring();
    }
  }

  &.markedForRemoval {
    background-color: @ak-color-R50;

    .href, .text {
      color: @ak-color-R500;
    }
  }

  &:focus {
    .href {
      color: @ak-color-B400;
    }
  }

  &.isRemovable {
    .text, .href {
      max-width: @max-text-width - @button-width;
    }
  }
}

.animationWrapper {
  box-sizing: border-box;

  &.isRemoving {
    animation: removeAnimation @animation-duration forwards;
    will-change: width;

    .chrome {
      overflow: hidden;
    }
  }
}

.text {
  color: @ak-color-N700;
  font-size: @font-size;
  font-weight: normal;
  line-height: 1;
  margin-left: @distance;
  margin-right: @distance;
  align-self: flex-start;
  height: 100%;

  // text truncation
  max-width: @max-text-width;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.href {
  .text();
  text-decoration: none;

  &:hover {
    color: @ak-color-B400;
  }
}

.button {
  .focus-ring(@color: @ak-color-R300);
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  border-radius: @border-radius;
  align-self: flex-end;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: @button-width;
  color: @ak-color-N500;

  &:hover {
    color: @ak-color-R500;
  }
}

